--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Kalpesh More",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
   }
 }
