--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 PORT = 8000
 MONGODB_URI = mongodb+srv://Kalpesh:Your-Password@cluster0.ty49tgl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+CORS_ORIGIN =*
