--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT = 8000
 MONGODB_URI = mongodb+srv://Kalpesh:Your-Password@cluster0.ty49tgl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 CORS_ORIGIN =*
+ACCESS_TOKEN_SECRET = chai-aur-code
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET = chai-aur-backend
+REFRESH_TOKEN_EXPIRY = 10d
